# llm-evaluation-toolkit

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  benchmark-schema.json  benchmark.yaml  mkdocs.yml  pyproject.toml
.github/workflows/: ci.yml
docs/: benchmarks.md  getting-started.md  index.md
examples/: README.md  benchmark.yaml
results/: history.json  smoke-test.json
results/run1/: history.json  smoke-test.json
results/run2/: history.json  smoke-test.json
src/llm_evaluation_toolkit/: __init__.py  cli.py
src/llm_evaluation_toolkit/artifacts/: __init__.py  base.py
src/llm_evaluation_toolkit/benchmarks/: __init__.py  config.py  env.py  executor.py  loader.py  metadata.py  models.py  profiles.py  registry.py  schema.py
src/llm_evaluation_toolkit/cli/: __init__.py  dashboard.py  errors.py  main.py  output.py
src/llm_evaluation_toolkit/config/: __init__.py  factory.py  loader.py  models.py
src/llm_evaluation_toolkit/core/: __init__.py  exceptions.py  project.py
src/llm_evaluation_toolkit/evaluation/: __init__.py  datasets.py  evaluator.py  metric_result.py  metrics.py  models.py  protocols.py  registry.py  report.py
src/llm_evaluation_toolkit/experiments/: __init__.py  comparator.py  comparison.py  comparison_report.py  history.py  models.py  result.py  runner.py  (+1 more)
tests/: test_base_abstractions.py  test_benchmark_executor.py  test_benchmark_loader.py  test_cli.py  test_cli_validate.py  test_config_loader.py  test_core.py  test_environment_resolver.py  test_evaluation.py  test_experiment_comparison.py  test_experiment_storage.py  test_metrics.py  test_openai_exceptions.py  test_openai_models.py  test_openai_provider.py  test_package.py  test_plugin_loader.py  test_plugin_registry.py  test_provider_contract.py  test_provider_from_config.py  test_provider_registry.py  test_run_storage.py  test_run_tracker.py  test_version.py
(+43 files in other folders)
