[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "llm_evaluation_toolkit"
version = "0.1.0"
description = "Tools for evaluating large language model outputs."
readme = "README.md"
requires-python = ">=3.13"
license = { text = "MIT" }
authors = [{ name = "llm-evaluation-toolkit contributors" }]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: Python :: 3.14",
  "Typing :: Typed",
]
dependencies = [
  "typer>=0.15",
  "rich>=14",
  "pydantic>=2.11",
  "openai>=2.46.0",
]

[project.optional-dependencies]
dev = [
  "ruff>=0.12",
  "pytest>=8.4",
  "pytest-cov>=7",
  "mypy>=1.17",
  "mkdocs>=1.6",
  "mkdocs-material>=9.6",
  "pre-commit>=4.3",
]

[project.scripts]
llm-eval = "llm_evaluation_toolkit.cli:app"

[project.urls]
Documentation = "https://github.com/eugefs/llm-evaluation-toolkit#readme"
Repository = "https://github.com/eugefs/llm-evaluation-toolkit"
Issues = "https://github.com/eugefs/llm-evaluation-toolkit/issues"

[tool.hatch.build.targets.wheel]
packages = ["src/llm_evaluation_toolkit"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = ["-ra", "--strict-config", "--strict-markers"]

[tool.ruff]
target-version = "py313"
line-length = 88
src = ["src"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM", "RUF"]

[tool.ruff.lint.isort]
known-first-party = ["llm_evaluation_toolkit"]

[tool.mypy]
python_version = "3.13"
strict = true
files = ["src", "tests"]
warn_unused_configs = true

[tool.coverage.run]
branch = true
source = ["llm_evaluation_toolkit"]

[tool.coverage.report]
show_missing = true
skip_covered = true
